# commontest

./: .gitignore  CMakeLists.txt  CommonTest.h  README.md  ai_defs.h  create_msvc_solution.bat  typedef.h
CommonTest/: GetRoi.cpp  Log.cpp  LpPositonAnsReadWrite.cpp  ShowRetrievalResult.cpp  TImageProcess.cpp  copyFile.cpp  imgconvert.cpp  multiThrdTest.cpp  read_Config.cpp  readsample.cpp
header/: CommonTest.h  DecServerShareMem.h  args_parser.h  cclog.h  color_space_convert.h  common_test.h  config.h  dec_server_sharemem.h  get_cpu_gpu_util.hpp  get_hw_infor.hpp  log.h  test_lp.h  thread.h  typedef.h  w_dirent.h
include/: CommonTest.h  test_lp.h
src/: FeaReadWrite.cpp  GetRoi.cpp  Log.cpp  args_parser.cpp  args_parser_gflags.cpp  args_parser_myself.cpp  config.cpp  copy_file.cpp  fea_read_write.cpp  get_cpu_gpu_util.cpp  get_hw_infor.cpp  get_roi.cpp  img_color_space_convert.cpp  imgconvert.cpp  log.cpp  lp_position_ans.cpp  multithread_test.cpp  opencv_show_chinese.cpp  read_Config.cpp  read_sample.cpp  readsample.cpp  show_retrieval_result.cpp
test/: test.cpp
